# gm.bot

./: .gitignore  README.md  auxiliary.py  db.py  db_utils.py  main.py  pyproject.toml  template.env
