[tool.poetry]
name = "gm-bot"
version = "7.0"
description = "discord bot that tracks gm streaks"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gm"}]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.1"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
