[tool.poetry]
name = "gm-bot"
version = "7.0"
description = "discord bot that tracks gm streaks"
authors = ["Christopher Nguyen", "Jerry Chen"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.1"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
